[project]
name = "pytype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.13.0",
    "pylint>=3.3.1",
    "ruff>=0.7.1",
]
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
files = [
    'src/*py',
]
