[project]
name = "pytype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
files = [
    'src/*py',
]
[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venvPath="."
venv = ".venv"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
pythonpath = ["src",]
testpaths = ["tests","src"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "myst-parser>=4.0.0",
    "pylint>=3.3.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.3",
    "sphinx>=8.1.3",
    "types-requests>=2.32.0.20241016",
]

